--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<script>
-    window.location.replace("site/index.html");
-</script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="/manifest.json">
+</head>
+
+<body>
+    <script>
+        window.location.replace("site/index.html");
+    </script>
+</body>
+
+</html>
